Working on Tutor Panel

--- a/dashboard.html
+++ b/dashboard.html
@@ -54,6 +54,7 @@
             <span class="nav-link-text ms-1">Dashboard</span>
           </a>
         </li>
+        
         <li class="nav-item">
           <a class="nav-link  " href="./courses.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -162,7 +163,7 @@
                   </a>
                 </li>
                 <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <a class="dropdown-item border-radius-md" href="./login.html">
                     <span><i class="fa fa-sign-out"> </i> </span> Logout
                   </a>
                 </li>
